# jackal_ws

./: .gitignore  .gitmodules
src/: ros2.repos
src/custom_bringup/project_bringup/: CMakeLists.txt  package.xml
src/custom_bringup/project_bringup/config/: ZEDodom_EKF_ekf_global.yaml  ZEDodom_EKF_nav2_param.yaml  _dualEKF_ekf_config.yaml  _imu_filter.yaml  _navsat_transform_front.yaml  dualEKF_ekf_global.yaml  dualEKF_ekf_global_3d.yaml  dualEKF_ekf_local.yaml  dualEKF_rtabmap_zed_common.yaml  ekf_global.yaml  (+13 more)
src/custom_bringup/project_description/: CMakeLists.txt  package.xml
src/jackel_ops/: package.xml  setup.cfg  setup.py
src/jackel_ops/jackel_ops/: april_tag_docking.py  april_tag_undocking.py  dataclass.py  enum.py  navigate_through_pose.py  status.py
src/mtu28_jackal/: README.md
src/mtu28_jackal/mtu28_bringup/: CMakeLists.txt  package.xml
src/mtu28_jackal/mtu28_description/: CMakeLists.txt  package.xml
src/odom_transformer/: README.md  package.xml  setup.py
src/odom_transformer/launch/: dual_gps_odom_publisher.launch.py  odom_heading_publisher.launch.py  zed_odom_convert.launch.py
src/odom_transformer/odom_transformer/: attitude_duro_heading2odom.py  dual_gps_odom_publisher.py  odom_heading_publisher.py  odom_transformer_ekf_node.py  odom_transformer_node.py
src/status_interfaces/: CMakeLists.txt  package.xml
src/status_interfaces/msg/: BasicStatus.msg  BatteryStatus.msg  DockGoal.msg  Job.msg  NodeDetails.msg  NodeStatus.msg  RobotStatus.msg  Status.msg  SubTask.msg  Task.msg  TopicDetails.msg  TopicStatus.msg  UndockGoal.msg  WayPoint.msg
(+53 files in other folders)
