<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jackel_ops</name>
  <version>0.0.0</version>
  <description>ROS 2 Python package for monitoring robot status, executing tasks, and reporting progress and results.</description>
  <maintainer email="vupadhye@mtu.edu">Vinay Upadhye</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>status_interfaces</exec_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>opennav_docking_msgs</depend>
  <depend>launch</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
